<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            android:orientation="vertical"
            app:contentScrim="?attr/colorPrimary">
            <androidx.appcompat.widget.Toolbar
                android:background="@drawable/gads_header"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:gravity="center_horizontal"
                android:clickable="true"
                android:padding="7dp"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:textColor="#E4750E"
                android:fontFamily="sans-serif-black"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:focusable="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/orange_bgrd"
                android:layout_height="10dp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#673AB7"
        android:paddingTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".SubmitProject">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal">
            <EditText
                android:background="@drawable/rect_square_corners"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:id="@+id/edtName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_marginEnd="20dp" />


            <EditText
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:background="@drawable/rect_square_corners"
                android:layout_marginLeft="20dp"
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/last_name"
                android:layout_marginStart="20dp" />


        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
             android:id="@+id/email"
             android:inputType="textEmailAddress"
             android:background="@drawable/rect_square_corners"
             android:layout_width="match_parent"
             android:layout_margin="20dp"
             android:layout_height="40dp"
             android:hint="@string/email" />
     </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <EditText
               android:inputType="textUri"
               android:background="@drawable/rect_square_corners"
               android:layout_margin="20dp"
               android:id="@+id/link"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/project_link" />
       </LinearLayout>
        <Button

            android:layout_marginTop="40sp"
            android:id="@+id/submitBtn"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
<!--    android:background="@drawable/crnr5"-->